feat(api): delete a host and all its rules (ER-303)
